--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
           <hr />
           <div class="slide-wrap">
             <div class="left2">
-              <img src="IMG/UI.png" alt="" />
+              <a href="https://appgloryui.netlify.app/main.html"
+                ><img src="IMG/UI.png" alt=""
+              /></a>
             </div>
             <div class="swiper-container container2">
               <div class="swiper-wrapper">
